<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:background="@color/colorPrimary"
    tools:context="com.dmt.design.oderfood.DangKyActivity">
    <TextView
        android:id="@+id/textViewDK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangKi"
        android:textStyle="bold"
        android:textColor="@color/whilecolor"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/size30dp"/>
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_below="@+id/textViewDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edtenDangNhapDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hintText"
            android:padding="@dimen/size10dp"
            android:background="@color/whilecolor"
            android:layout_margin="@dimen/size10dp"
            android:drawableLeft="@drawable/group"
            android:singleLine="true"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/tendangnhap"/>

        <EditText
            android:id="@+id/edMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/closed"
            android:textColor="@color/hintText"
            android:layout_margin="@dimen/size10dp"
            android:padding="@dimen/size10dp"
            android:background="@color/whilecolor"
            android:password="true"
            android:singleLine="true"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/matkhau"/>
        <RadioGroup
            android:id="@+id/rdgGioiTinhDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nam"/>
            <RadioButton
                android:id="@+id/rdNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nữ"/>
        </RadioGroup>
        <EditText
            android:id="@+id/edNgaySinhDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/congv"
            android:textColor="@color/hintText"
            android:layout_margin="@dimen/size10dp"
            android:padding="@dimen/size10dp"
            android:background="@color/whilecolor"
            android:singleLine="true"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/ngaysinh"/>
        <EditText
            android:id="@+id/edCMNDdk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/cmnd"
            android:textColor="@color/hintText"
            android:layout_margin="@dimen/size10dp"
            android:maxLength="8"
            android:background="@color/whilecolor"
            android:padding="@dimen/size10dp"
            android:singleLine="true"
            android:hint="@string/ChungMinhNhanDan"
            android:drawablePadding="@dimen/size10dp"
            android:numeric="integer"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:weightSum="2">
            <Button
                android:id="@+id/btDongY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DongY"
                android:background="@color/green"
                android:textColor="@color/whilecolor"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btThoat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Thoat"
                android:background="@color/orange"
                android:textColor="@color/whilecolor"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
